[Java] Client/Server
Improve and test Client/Server built using netty libraries